Rules update, Chaos Knights, Nurglings.

--- a/Warhammer/40k_calc.html
+++ b/Warhammer/40k_calc.html
@@ -123,7 +123,7 @@ Unit	M	T	SV	W	LD	OC
 Infernus Squad	6"	4	3+	2	6+	1
 Ranged Weapons	Range	A	BS	S	AP	D	Keywords
 Bolt Pistol (x6)	12"	1	3+	4	0	1	Pistol
-Pyreblaster (x6)	12"	D6	N/A	5	0	1	Ignores Cover, Torrent
+Pyreblaster (x6)	12"	D6	N/A	5	-1	1	Ignores Cover, Torrent
 Melee Weapons	Range	A	WS	S	AP	D	Keywords
 Close Combat Weapon (x6)	Melee	3	3+	4	0	1	-
 Abilities Purge the Foe
@@ -321,6 +321,31 @@ Chainfist (x3)	Melee	3	4+	8	-2	2	Anti-Vehicle 3+
 Abilities Invulnerable Save 4DeathwingAttached UnitTeleport Homer
 Rules Deep StrikeOath of MomentAnti-Devastating WoundsBlastIgnores CoverTorrentHazardous
 Keywords: Deathwing Deathwing Terminator Squad Faction: Adeptus Astartes Faction: Dark Angels Imperium Infantry Terminator`,
+            `Ezekiel 
+Unit	M	T	SV	W	LD	OC
+Ezekiel	6"	4	2+	4	6+	1
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+➤ Mind Wipe - witchfire	12" (x0)	1	2+	6	-2	D6	Devastating Wounds, Precision, Psychic
+➤ Mind Wipe - focussed witchfire	12"	1	2+	6	-2	D6	Anti-Character 4+, Devastating Wounds, Hazardous, Precision, Psychic
+The Deliverer	12"	1	2+	4	-1	2	Pistol, Precision
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Traitor's Bane	Melee	4	2+	6	-2	D3	Anti-Chaos 2+, Psychic
+Abilities
+Invulnerable save: 4+
+Engulfing Fear [Psychic]: In your Shooting phase, you can select one enemy unit within 18" of this model. That enemy unit must take a Battle-shock test.
+Book of Salvation: While this model is leading a unit, add 1 to the Attacks characteristic of melee weapons equipped by models in that unit. When this model is destroyed, each friendly Adeptus Astartes unit within 6" of this model must take a Battle-shock test.
+Leader: This model can be attached to the following units:
+■ Assault Intercessor Squad
+■ Bladeguard Veteran Squad
+■ Hellblaster Squad
+■ Infernus Squad
+■ Inner Circle Companions
+■ Intercessor Squad
+■ Sternguard Veterans Squad
+■ Tactical Squad
+Psychic Hood: While this model is leading a unit, models in that unit have the Feel No Pain 4+ ability against Psychic Attacks.
+Rules Oath of MomentDevastating WoundsPrecisionPsychicHazardousPistolAnti-
+Keywords: Character Deathwing Epic Hero Ezekiel Faction: Adeptus Astartes Faction: Dark Angels Grenades Imperium Infantry Librarian Psyker`,
             `Lion El'Jonson
 Unit	M	T	SV	W	LD	OC
 Lion El'Jonson	8"	9	2+	10	5+	4
@@ -329,7 +354,7 @@ Ranged Weapons	Range	A	BS	S	AP	D	Keywords
 ➤ Arma Luminis - plasma	12"	2	2+	8	-3	2	Pistol
 Melee Weapons	Range	A	WS	S	AP	D	Keywords
 ➤ Fealty - strike	Melee	8	2+	12	-4	4	Lethal Hits
-➤ Fealty - sweep (x0)	Melee	16	2+	6	-3	1	Sustained Hits 1
+➤ Fealty - sweep (x0)	Melee	16	2+	6	-3	2	Sustained Hits 1
 Abilities Primarch of the First LegionThe Emperor's ShieldDark Angels BodyguardInvulnerable save
 Primarch of the First Legion All Secrets RevealedMartial Exemplar [Aura]No Hiding From the Watchers [Aura]
 Rules Deep StrikeFights FirstOath of MomentPistolLethal HitsSustained Hits
@@ -427,8 +452,7 @@ Keywords: Faction: Astra Militarum Imperium Regiment Scout Sentinels Smoke Squad
             "- Agents of the Imperium -",
             // Chaos Forces Faction – Includes 6 Armies:
             "- Chaos -",
-            // XXX: Why ever choose unfocused witchfire?
-            `Be'lakor 
+            `Be'lakor
 Unit	M	T	SV	W	LD	OC
 Be'lakor	12"	10	4+	18	6+	5
 Ranged Weapons	Range	A	BS	S	AP	D	Keywords
@@ -437,10 +461,111 @@ Ranged Weapons	Range	A	BS	S	AP	D	Keywords
 Melee Weapons	Range	A	WS	S	AP	D	Keywords
 ➤ The Blade of Shadows - sweep (x0)	Melee	14	2+	8	-3	1	-
 ➤ The Blade of Shadows - strike	Melee	6	2+	14	-4	D6+1	Lethal Hits
-Abilities The Dark Master (Aura)Shadow FormInvulnerable SaveDamaged: 1-6 wounds remaining
+Abilities The Dark Master (Aura)Shadow FormInvulnerable Save 4Damaged: 1-6 wounds remaining
 Shadow Form Wreathed in Shadows (Aura, Psychic)Pall of Despair (Aura, Psychic)Shadow Lord (Aura, Psychic)
 Rules Deep StrikeThe Shadow of ChaosWarp RiftsStealthDeadly Demise D6Devastating WoundsPsychicHazardousIgnores CoverLethal Hits
 Keywords: Be'lakor Chaos Character Daemon Epic Hero Faction: Legiones Daemonica Fly Monster Psyker Warlord`,
+            `Knight Abominant 
+Unit	M	T	SV	W	LD	OC
+Knight Abominant	10"	12	3+	22	6+	10
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Diabolus heavy stubber	36"	3	3+	5	0	1	Rapid Fire 3
+Volkite combustor	30"	9	3+	12	0	3	Devastating Wounds
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Balemace	Melee	3	3+	8	-1	2	Extra Attacks
+Electroscourge	Melee	9	3+	10	-2	3	Sustained Hits 1
+Abilities
+Invulnerable Save: This model has a 5+ invulnerable save against ranged attacks.
+Vortex Terrors (Psychic): At the start of your Shooting phase, select one enemy unit within 12" of this model. That enemy unit must take a Battle-shock test.
+Warp Storms (Psychic): At the end of your Movement phase, roll one D6 for each enemy unit within 9" of this model: on a 3+, that enemy unit suffers D3 mortal wounds.
+Damaged: 1-7 wounds remaining: While this model has 1-7 wounds remaining, subtract 5 from this model’s Objective Control characteristic and each time this model makes an attack, subtract 1 from the Hit roll.
+Rules Super-Heavy WalkerDeadly Demise D6Extra AttacksRapid FireSustained HitsDevastating Wounds
+Keywords: Abhorrent Allied Units Chaos Character Faction: Chaos Knights Knight Abominant Psyker Titanic Towering Vehicle Walker`,
+            `Knight Desecrator 
+Unit	M	T	SV	W	LD	OC
+Knight Desecrator	10"	12	3+	22	6+	10
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Desecrator laser destructor	72"	3	2+	18	-4	D6+3	-
+Diabolus heavy stubber	36"	3	2+	5	0	1	Rapid Fire 3
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+➤ Reaper chainsword - strike	Melee	4	3+	14	-4	6	-
+➤ Reaper chainsword - sweep	Melee (x0)	12	3+	9	-3	2	-
+➤ Warpstrike claw - strike	Melee (x0)	4	3+	20	-3	8	-
+➤ Warpstrike claw - sweep	Melee (x0)	8	3+	10	-2	3	-
+Abilities
+Invulnerable Save: This model has a 5+ invulnerable save against ranged attacks.
+Taskmaster (Aura): While a friendly WAR DOG model is within 9" of this model, each time that WAR DOG model makes a ranged attack, re-roll a Hit roll of 1.
+Obsessive Ruthlessness: Each time this model makes a ranged attack against a MONSTER or VEHICLE unit, that attack has the [DEVASTATING WOUNDS] ability.
+Damaged: 1-7 wounds remaining: While this model has 1-7 wounds remaining, subtract 5 from this model’s Objective Control characteristic and each time this model makes an attack, subtract 1 from the Hit roll.
+Rules Super-Heavy WalkerDeadly Demise D6Rapid Fire
+Keywords: Abhorrent Allied Units Chaos Character Faction: Chaos Knights Knight Desecrator Titanic Towering Vehicle Walker`,
+            `Knight Rampager 
+Unit	M	T	SV	W	LD	OC
+Knight Rampager	12"	12	3+	22	6+	10
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Diabolus heavy stubber	36"	3	3+	5	0	1	Rapid Fire 3
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+➤ Reaper chainsword - strike	Melee	6	2+	14	-4	6	-
+➤ Reaper chainsword - sweep (x0)	Melee	18	2+	9	-3	2	-
+➤ Warpstrike claw - strike	Melee	6	2+	20	-3	8	-
+➤ Warpstrike claw - sweep (x0)	Melee	12	2+	10	-2	3	-
+Abilities
+Invulnerable Save: This model has a 5+ invulnerable save against ranged attacks.
+Frenzied Rampage (Aura): While a friendly WAR DOG model is within 9" of this model, each time that WAR DOG model makes a melee attack, re-roll a Hit roll of 1.
+Bloodlust: Each time this model makes a Charge move, until the end of the turn, its melee weapons have the [SUSTAINED HITS 1] ability. In addition, once per battle, this model is eligible to declare a charge in a turn in which it Advanced.
+Damaged: 1-7 wounds remaining: While this model has 1-7 wounds remaining, subtract 5 from this model’s Objective Control characteristic and each time this model makes an attack, subtract 1 from the Hit roll.
+Rules Super-Heavy WalkerDeadly Demise D6Sustained HitsRapid Fire
+Keywords: Abhorrent Allied Units Chaos Character Faction: Chaos Knights Knight Rampager Titanic Towering Vehicle Walker`,
+            `Knight Tyrant 
+Unit	M	T	SV	W	LD	OC
+Knight Tyrant	8"	13	2+	24	6+	10
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Twin daemonbreath meltagun (x2)	12"	1	3+	9	-4	D6	Melta 2, Twin-linked
+Gheiststrike missile launcher (x2)	72"	1	3+	12	-6	D6+1	Anti-TITANIC 4+, Devastating Wounds
+Twin desecrator cannon	36"	D6	3+	6	0	1	Blast, Twin-linked
+Brimstone volcano lance	60"	D3	3+	20	-5	D6+8	Blast
+Ectoplasma decimator - standard (x0)	36"	D6+3	3+	8	-2	2	Blast
+Ectoplasma decimator - supercharge	36"	D6+3	3+	9	-3	3	Blast, Hazardous
+Darkflame cannon (x0)	18"	3D6	N/A	8	-1	2	Torrent, Ignores Cover
+Warpshock harpoon (x0)	18"	1	2+	24	-6	12	Anti-MONSTER 4+, Anti-VEHICLE 4+, Devastating Wounds
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Titanic feet	Melee	4	4+	8	-1	2	-
+Abilities
+Infernal Aegis (Aura): While a friendly WAR DOG model is within 6" of this model, that WAR DOG model has the Benefit of Cover.
+Bastion of Corruption: Enemy units that are set up on the battlefield as Reinforcements cannot be set up within 12" of this model.
+Invulnerable Save: This model has a 5+ invulnerable save against ranged attacks.
+Damaged: 1-8 wounds remaining: While this model has 1-8 wounds remaining, subtract 5 from this model’s Objective Control characteristic and each time this model makes an attack, subtract 1 from the Hit roll.
+Rules Super-Heavy WalkerDeadly Demise D6+2MeltaTwin-linkedAnti-Devastating WoundsBlastHazardous
+Keywords: Allied Units Chaos Character Faction: Chaos Knights Knight Tyrant Titanic Towering Vehicle Walker`,
+            `Nurglings 
+Models
+ 3x Nurgling Swarm: Diseased claws and teeth
+Unit	M	T	SV	W	LD	OC
+Nurglings	5"	3	7+	4	8+	0
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Diseased claws and teeth (x3)	Melee	4	5+	2	0	1	Lethal Hits
+Abilities
+Invulnerable Save: 6+
+Mischief Makers (Aura): While an enemy unit (excluding MONSTERS and VEHICLES) is within 6" of this unit, each time a model in that unit makes a melee attack, subtract 1 from the Hit roll.
+Rules
+Deep Strike: During the Declare Battle Formations step, if every model in a unit has this ability, you can set it up in Reserves instead of setting it up on the battlefield. If you do, in the Reinforcements step of one of your Movement phases you can set up this unit anywhere on the battlefield that is more than 9" horizontally away from all enemy models.
+If a unit with the Deep Strike ability arrives from Strategic Reserves, the controlling player can choose for that unit to be set up either using the rules for Strategic Reserves or using the Deep Strike ability.
+
+The Shadow of Chaos: If your Army Faction is LEGIONES DAEMONICA, certain areas of the battlefield are considered to be within your army’s Shadow of Chaos, as follows:
+■ Your deployment zone is always within your army’s Shadow of Chaos.
+■ At the start of any phase, if you control at least half of the objective markers within No Man’s Land, until the end of that phase, No Man’s Land is within your army’s Shadow of Chaos.
+■ At the start of any phase, if you control at least half of the objective markers within your opponent’s deployment zone, until the end of that phase, your opponent’s deployment zone is within your army’s Shadow of Chaos.
+DAEMONIC MANIFESTATION
+While a LEGIONES DAEMONICA unit from your army is within your army’s Shadow of Chaos, each time that unit takes a Battle-shock test, add 1 to that test and, if that test is passed, one model in that unit regains up to D3 lost wounds (if that unit is a BATTLELINE unit and that test is passed, up to D3 destroyed models can be returned to that unit instead).
+
+
+DAEMONIC TERROR
+While an enemy unit is within your army’s Shadow of Chaos and/or it is within 6" of one or more BLOODTHIRSTER, GREAT UNCLEAN ONE, KAIROS FATEWEAVER, KEEPER OF SECRETS, LORD OF CHANGE, ROTIGUS, SHALAXI HELBANE or SKARBRAND units from your army, each time that unit takes a Battle-shock test, subtract 1 from that test and, if that test is failed, that enemy unit suffers D3 mortal wounds.
+
+Warp Rifts: Each time a LEGIONES DAEMONICA unit from your army is set up on the battlefield using the Deep Strike ability, if it is set up wholly within your army’s Shadow of Chaos, and/or if it is set up wholly within 6" of one or more friendly BLOODTHIRSTER, GREAT UNCLEAN ONE, KAIROS FATEWEAVER, KEEPER OF SECRETS, LORD OF CHANGE, ROTIGUS, SHALAXI HELBANE or SKARBRAND units with which it shares the KHORNE, TZEENTCH, NURGLE or SLAANESH keyword, it can be set up anywhere that is more than 6" horizontally away from all enemy models, instead of more than 9".
+Infiltrators: During deployment, if every model in a unit has this ability, then when you set it up, it can be set up anywhere on the battlefield that is more than 9" horizontally away from the enemy deployment zone and all enemy models.
+Lethal Hits: Weapons with [LETHAL HITS] in their profile are known as Lethal Hits weapons. Each time an attack is made with such a weapon, a Critical Hit automatically wounds the target.
+Keywords: Battleline Chaos Daemon Faction: Legiones Daemonica Nurgle Nurglings Swarm`,
             //"- Death Guard -",  // Are these not Chaos Space Marines?
             "- Dark Mechanicum -",
             "- The Lost and The Damned -",  // Misc chaos fans.
@@ -863,22 +988,31 @@ Keywords: Character Epic Hero Faction: Leagues of Votann Infantry Warlord Ûthar
                     log("Rotating Death: This model’s Twin Heavy Onslaught Gatling Cannon has the [SUSTAINED HITS 2] ability when targeting Infantry units.")
                     weapon_keywords.push("SUSTAINED HITS 2")
                 }
-                let hit_rerolls = 0
-                let wound_rerolls = 0
-                let damage_rerolls = 0
-                // Aqullon Optics: Each time this model is selected to shoot, you can re-roll one Hit roll, you can re-roll one Wound roll and you can re-roll one Damage roll when resolving its attacks.
-                if (source_abilities.includes("AQUILON OPTICS")) {
-                    hit_rerolls += 1
-                    wound_rerolls += 1
-                    damage_rerolls += 1
-                } 
                 const WS = geti(`skill${i}`) || 0
                 const S = geti(`strength${i}`)
                 const AP = Math.abs(geti(`piercing${i}`))
                 const TOTAL_OBLITERATION = source_abilities.includes("TOTAL OBLITERATION") && R > 1 && (target_keywords.includes("MONSTER") || target_keywords.includes("VEHICLE"))
                 weapon_spreads[weapon] = {}
                 for (let time = 0; time < times * count; ++time) {
+                    ///////////////////////
+                    // Shooting/Fight phase
+                    let hit_rerolls = 0
+                    let wound_rerolls = 0
+                    let damage_rerolls = 0
+                    // Aqullon Optics: Each time this model is selected to shoot, you can re-roll one Hit roll, you can re-roll one Wound roll and you can re-roll one Damage roll when resolving its attacks.
+                    if (source_abilities.includes("AQUILON OPTICS")) {
+                        hit_rerolls += 1
+                        wound_rerolls += 1
+                        damage_rerolls += 1
+                    }
+                    let hit_bonus = 0
+                    // Mischief Makers (Aura): While an enemy unit (excluding MONSTERS and VEHICLES) is within 6" of this unit, each time a model in that unit makes a melee attack, subtract 1 from the Hit roll.
+                    if (target_abilities.includes("MISCHIEF MAKERS (AURA)") && R < 2) {
+                        log("Mischief Makers -1 to hit.")
+                        hit_bonus = -1
+                    }
                     let take_battleshock = false
+                    let battleshock_bonus = 0
                     let A = geti(`attacks${i}`)
                     // Each time a [RAPID FIRE X] weapon targets a unit within half that weapon’s range, the Attacks characteristic of that weapon is increased by the amount denoted by ‘x’.
                     let rf = get_keyword_value(weapon_keywords, "RAPID FIRE")
@@ -903,7 +1037,7 @@ Keywords: Character Epic Hero Faction: Leagues of Votann Infantry Warlord Ûthar
                         let hits = 1
                         let lethal_hits = false
                         if (!source_keywords.includes("TORRENT")) {  // Torrent autohits.
-                            let hit_roll = d6()
+                            let hit_roll = d6() + hit_bonus
                             log(`Hit roll ${attack}: ${hit_roll}`)
                             // Re-rolls
                             // Total Obliteration: Each time a ranged attack made by a model in this unit targets a Monster or Vehicle model, you can re-roll the Hit roll, you can re-roll the Wound roll and you can re-roll the Damage roll. TODO
@@ -914,7 +1048,7 @@ Keywords: Character Epic Hero Faction: Leagues of Votann Infantry Warlord Ûthar
                             while (hit_rerolls > 0) {
                                 --hit_rerolls
                                 if (hit_roll < WS) {
-                                    hit_roll = d6()
+                                    hit_roll = d6() + hit_bonus
                                     log(`Hit re-roll: ${hit_roll}`)
                                 } else break
                             }
@@ -963,6 +1097,7 @@ Keywords: Character Epic Hero Faction: Leagues of Votann Infantry Warlord Ûthar
                         if (weapon.includes("Pyreblaster") && source_abilities.includes("PURGE THE FOE")) {
                             log("Target must take battleshock test.")
                             take_battleshock = true
+                            battleshock_bonus -= 1
                         }
 
                         for (let hit = 0; hit < hits; ++hit) {
@@ -1100,9 +1235,12 @@ Keywords: Character Epic Hero Faction: Leagues of Votann Infantry Warlord Ûthar
                             weapon_spreads[weapon][D] = (weapon_spreads[weapon][D] || 0) + 1
                         }  // hits
                     }  // attacks
+                    //////////////
+                    // Battleshock
                     // You take a Battle-shock test for a unit by rolling 2D6 and attempting to equal or exceed its Leadership stat. If the test fails, you can’t target the unit with Stratagems, it can’t contest objectives, and you risks losing models when it falls back from combat. https://www.wargamer.com/warhammer-40k/battle-shock#:~:text=You%20take%20a%20Battle%2Dshock,it%20falls%20back%20from%20combat.
+                    if (source_abilities.includes("ENGULFING FEAR [PSYCHIC]") && inches < 18) take_battleshock = true
                     if (take_battleshock) {
-                        if (d6() + d6() < LD) log(`Target is battle-shocked!`)
+                        if (d6() + d6() + battleshock_bonus < LD) log(`Target is battle-shocked!`)
                         else log("Battle-shock test passed.")
                     }
                 }  // rounds
