--- a/Warhammer/40k_calc.html
+++ b/Warhammer/40k_calc.html
@@ -146,6 +146,24 @@ Armoured Tracks	Melee	3	4+	6	0	1	-
 Abilities TransportAssault VehicleShield Dome
 Rules Deadly Demise D3Firing Deck 6Oath of MomentRapid Fire
 Keywords: Dedicated Transport Faction: Adeptus Astartes Imperium Impulsor Transport Vehicle`,
+            `Hellblaster Squad 
+Models
+ 4x Hellblaster: Bolt Pistol, Close Combat Weapon, Plasma Incinerator
+ 1x Hellblaster Sergeant: Close Combat Weapon, Plasma Incinerator, Plasma Pistol
+Unit	M	T	SV	W	LD	OC
+Hellblaster Squad	6"	4	3+	2	6+	1
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Bolt Pistol (x4)	12"	1	3+	4	0	1	Pistol
+➤ Plasma Incinerator - Standard (x0)	24"	2	3+	7	-2	1	Assault, Heavy
+➤ Plasma Incinerator - Supercharge (x5)	24"	2	3+	8	-3	2	Assault, Heavy, Hazardous
+➤ Plasma Pistol - Supercharge (x0)	12"	1	3+	8	-3	2	Hazardous, Pistol
+➤ Plasma Pistol - Standard	12"	1	3+	7	-2	1	Pistol
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Close Combat Weapon (x5)	Melee	3	3+	4	0	1	-
+Abilities
+For the Chapter!: Each time a model in this unit is destroyed, roll one D6: on a 3+, do not remove it from play. The destroyed model can shoot after the attacking model’s unit has finished making its attacks, and is then removed from play. When resolving these attacks, any Hazardous tests taken for that attack are automatically passed.
+Rules Oath of MomentPistolHazardousHeavyAssault
+Keywords: Faction: Adeptus Astartes Grenades Hellblaster Squad Imperium Infantry Tacticus`,
             `Land Raider 
 Unit	M	T	SV	W	LD	OC
 Land Raider	10"	12	2+	16	6+	5
@@ -1414,8 +1432,10 @@ Keywords: Character Epic Hero Faction: Leagues of Votann Infantry Warlord Ûthar
                                     D -= 1  // This is a negate; not a modifier which can't normally go below 1 according to "Rules Commentary": https://www.reddit.com/r/Warhammer40k/comments/1eibdkb/comment/lg5nmn5/
                                 }
                             }
-                            log(`Target squad takes ${D} damage!`)
-                            damage += D
+                            // Only "mortal Wounds" from for example DEADLY DEMISE carry over: https://spikeybits.com/warhammer-40k/mortal-wounds-rules/
+                            let overkill = (D - W) > 0 ? D - W : 0
+                            log(`Target squad takes ${D} - ${overkill} overkill = ${D - overkill} damage!`)
+                            damage += D - overkill
                             // Dealt damage causes mortal wounds, not to be confused with presave or preFNP wounds! By anthropomorphing vehicles and bunkers like that, i'm surprised there aren't more evil animated versions of those like by Khorne and Final Fantasy.
                             weapon_spreads[weapon][D] = (weapon_spreads[weapon][D] || 0) + 1
                         }  // hits
